# amz-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs
src/amazon/: client.rs  mod.rs  models.rs  parser.rs  regions.rs  selectors.rs
src/commands/: compare.rs  mod.rs  product.rs  search.rs
src/filters/: keyword.rs  mod.rs  price.rs  prime.rs  rating.rs
src/format/: mod.rs
src/tropical/: client.rs  mod.rs  models.rs  parser.rs
tests/: parser_integration.rs
tests/fixtures/: search_result.html
